# docpilot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  zeabur.yaml
apps/mcp_server/: Dockerfile  retrieval.py  server.py
data/processed/: bm25_corpus.pkl  bm25_index.pkl  chunks.jsonl  embedding_ids.json  embeddings.npy
data/raw/: attention_presentation.pptx  transformer_presentation.pptx
docs/: AI_WORKFLOW.md
scripts/: build_index.py  demo_pipeline.py
skills/chunk-content/: SKILL.md
skills/chunk-content/scripts/: run.py
skills/clean-text/: SKILL.md
skills/clean-text/scripts/: run.py
skills/parse-pdf/: SKILL.md
skills/parse-pdf/scripts/: run.py
skills/parse-pptx/: SKILL.md
skills/parse-pptx/scripts/: run.py
tests/: mcp_client.py  mcp_query_demo.py  test_preprocessor.py
