[project]
name = "docpilot"
version = "0.1.0"
description = "Unstructured document pipeline + remote MCP server (Raydium take-home)"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "python-pptx>=0.6.23",
    "mcp[cli]>=1.0.0",
    "rank-bm25>=0.2.2",
    "voyageai>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/doc_preprocessor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
